# SlicerPipelines

./: CMakeLists.txt  README.md
Documentation/: PipelineCaseIterator.md  PipelineCreator.md
LegacyPipelineCLIBridge/: CMakeLists.txt  qSlicerLegacyPipelineCLIBridgeModule.cxx  qSlicerLegacyPipelineCLIBridgeModule.h
LegacyPipelineCLIBridge/BridgeParameters/: CMakeLists.txt  README.md  qSlicerLegacyPipelineCLIModulesBridgeParameter.cxx  qSlicerLegacyPipelineCLIModulesBridgeParameter.h  qSlicerLegacyPipelineCLIModulesBridgeParameterFactory.cxx  qSlicerLegacyPipelineCLIModulesBridgeParameterFactory.h  qSlicerLegacyPipelineCLIModulesConcreteBridgeParameter.cxx.template  qSlicerLegacyPipelineCLIModulesConcreteBridgeParameter.h.template
LegacyPipelineCLIBridge/Resources/: qSlicerLegacyPipelineCLIBridgeModule.qrc
LegacyPipelineCaseIterator/: CMakeLists.txt  LegacyPipelineCaseIterator.py
LegacyPipelineCaseIterator/Resources/CommandLineScripts/: LegacyPipelineCaseIteratorRunner.py
LegacyPipelineCaseIterator/Resources/UI/: LegacyPipelineCaseIterator.ui
LegacyPipelineCreator/: CMakeLists.txt  LegacyPipelineCreator.py
LegacyPipelineCreator/LegacyPipelineCreatorLib/: Asynchrony.py
LegacyPipelineCreator/LegacyPipelineCreatorLib/_Private/: ModuleTemplate.py
LegacyPipelineCreator/Resources/PipelineTemplateModule/: CMakeLists.txt.template  XXX.py.template
LegacyPipelineCreator/Resources/PipelineTemplateModule/CommandLineScripts/: RunXXX.py.template
LegacyPipelineCreator/Resources/PipelineTemplateModule/Resources/UI/: XXX.ui
LegacyPipelineCreator/Resources/UI/: LegacyPipelineCreator.ui
LegacyPipelineCreator/Testing/Python/: CMakeLists.txt  ModuleTemplateTests.py  PipelineCreatorModuleTest.py
LegacyPipelineCreator/Widgets/: PipelineModuleListWidget.py  SelectModulePopUp.py
LegacyPipelineModules/: CMakeLists.txt  LegacyPipelineModules.py
LegacyPipelineModules/LegacyPipelineModulesLib/: CLIModuleWrapping.py  PipelineParameters.py  SegmentEditorWrapping.py  SegmentationsWrapping.py  SurfaceToolboxWrapping.py  VolumesWrapping.py  vtkFilterJSONReader.py
LegacyPipelineModules/Resources/PipelineVTKFilterJSON/: vtkPolyDataNormals.json  vtkQuadricDecimation.json
LegacyPipelineModules/Resources/UI/: LegacyPipelineModules.ui
PipelineCLIBridge/: CMakeLists.txt  qSlicerPipelineCLIBridgeModule.cxx  qSlicerPipelineCLIBridgeModule.h
PipelineCLIBridge/BridgeParameters/: CMakeLists.txt  README.md  qSlicerPipelineCLIModulesBridgeParameter.cxx  qSlicerPipelineCLIModulesBridgeParameter.h  qSlicerPipelineCLIModulesBridgeParameterFactory.cxx  qSlicerPipelineCLIModulesBridgeParameterFactory.h  qSlicerPipelineCLIModulesConcreteBridgeParameter.cxx.template  qSlicerPipelineCLIModulesConcreteBridgeParameter.h.template
PipelineCLIBridge/Resources/: qSlicerPipelineCLIBridgeModule.qrc
PipelineCaseIterator/: CMakeLists.txt  PipelineCaseIterator.py
PipelineCaseIterator/PipelineCaseIteratorLibrary/: Asynchrony.py  IteratorParameterFile.py  __init__.py
PipelineCaseIterator/Resources/CommandLineScripts/: PipelineCaseIteratorRunner.py
PipelineCaseIterator/Resources/UI/: PipelineCaseIterator.ui
PipelineCaseIterator/Testing/Python/: CMakeLists.txt  CaseIteratorRunnerTest.py  IteratorParametersTest.py
PipelineCreator/: CMakeLists.txt  PipelineCreator.py
PipelineCreator/PipelineCreatorLib/: Asynchrony.py  PipelineBases.py
PipelineCreator/PipelineCreatorLib/_Private/: ModuleHolder.py
PipelineCreator/Resources/PipelineTemplateModule/: CMakeLists.txt.template  XXX.py.template
PipelineCreator/Resources/PipelineTemplateModule/CommandLineScripts/: RunXXX.py.template
PipelineCreator/Resources/PipelineTemplateModule/Resources/UI/: XXX.ui
PipelineCreator/Resources/PipelineVTKFilterJSON/: vtkConnectivityFilter.json
PipelineCreator/Resources/UI/: PipelineCreator.ui  SelectPipelinePopUp.ui
PipelineCreator/Testing/Python/: CMakeLists.txt  ModuleTemplateTests.py  PipelineCreatorGenerationUtilTest.py  PipelineCreatorModuleTest.py
PipelineCreator/Widgets/: PipelineInputWidget.py  PipelineListWidget.py  PipelineModuleListWidget.py  PipelineOutputWidget.py  PipelineProgressBar.py  PipelineStepWidget.py  ReferenceComboBox.py  SelectModulePopUp.py  SelectPipelinePopUp.py  Types.py
PipelineCreator/_PipelineCreator/: ModuleTemplate.py  PipelineRegistrar.py
PipelineCreator/_PipelineCreator/PipelineCreation/: __init__.py  core.py  util.py  validation.py
PipelineCreator/_PipelineCreator/PipelineCreation/CodeGeneration/: __init__.py  logic.py  module.py  parameterNode.py  util.py  widget.py
PipelineCreator/_PipelineCreator/SelectableModules/: SurfaceToolboxWrapping.py  vtkFilterJSONReader.py
PipelineCreatorMk2/: CMakeLists.txt  PipelineCreatorMk2.py
PipelineCreatorMk2/Resources/UI/: PipelineCreatorMk2.ui
PipelineCreatorMk2/Testing/Python/: PipelineCreatorMk2ModuleTest.py
PipelineCreatorMk2/Widgets/: PipelineListWidget.py  SelectPipelinePopUp.py
PipelineCreatorMk2/_PipelineCreatorMk2/: PipelineRegistrar.py
PipelineModules/: CMakeLists.txt  PipelineModules.py
PipelineModules/BridgeParameters/: CMakeLists.txt  qSlicerPipelineCLIModulesBridgeParameter.cxx  qSlicerPipelineCLIModulesBridgeParameter.h  qSlicerPipelineCLIModulesBridgeParameterFactory.cxx  qSlicerPipelineCLIModulesBridgeParameterFactory.h  qSlicerPipelineCLIModulesConcreteBridgeParameter.h.template
PipelineModules/PipelineModulesLib/: CLIModuleWrapping.py  ModelsWrapping.py  PipelineParameters.py  SegmentEditorWrapping.py  SegmentationsWrapping.py  SurfaceToolboxWrapping.py  Util.py  VolumesWrapping.py  vtkFilterJSONReader.py
PipelineModules/Resources/PipelineVTKFilterJSON/: vtkCleanPolyData.json  vtkDecimatePro.json  vtkFillHolesFilter.json  vtkSmoothPolyDataFilter.json  vtkWindowedSincPolyDataFilter.json
PipelineModules/Resources/UI/: PipelineModules.ui
PipelineModules/_PipelineModules/: SegmentEditorWrapping.py  SegmentationsWrapping.py  SurfaceToolboxWrapping.py  vtkWrapping.py
PipelineModulesMk2/: CMakeLists.txt  PipelineModulesMk2.py
PipelineModulesMk2/_PipelineModulesMk2/: SurfaceToolboxWrapping.py
(+8 files in other folders)
